--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "grunt-contrib-compress": "0.13.0",
     "grunt-contrib-copy": "0.8.0",
     "grunt-contrib-symlink": "git://github.com/peterkeating/grunt-contrib-symlink.git#53a26bd3d5a8266d04b909ff4b1c434cbd975afb",
-    "grunt-msbuild": "^0.3.3",
+    "grunt-msbuild": "0.4.4",
     "grunt-msdeploy": "git://github.com/peterkeating/grunt-msdeploy.git#98ce22bafaf9e4bd7df9a409dfdbe0b9ce1d1777",
     "grunt-orchard-development": "0.6.2",
     "grunt-shell": "^1.3.0",
